2005-10-07  Andy Wingo  <wingo@pobox.com>

	* ext/raw1394/gstdv1394src.c: Make interruptible, so it won't
	block forever in a read().

	* ext/raw1394/gstdv1394src.c: Clean up for style before doing some
	hacking. The only change should be that the state change stuff was
	put into basesrc's start() and stop() routines, which coalesces
	some steps.

2005-10-07  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Add check for mmap
	  
	* gst/debug/Makefile.am:
	  Only compile efence plugin on systems that have mmap.

2005-10-05  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/debug/Makefile.am:
	* gst/debug/breakmydata.c:
	* gst/debug/gstdebug.c:
	* gst/debug/gstnavigationtest.c:
	* gst/debug/gstnavseek.c: 
	* gst/debug/gstnavseek.h:
	* gst/debug/progressreport.c: 
	* gst/debug/testplugin.c:
	  Port progressreport, navseek, navigationtest, testsink and
	  breakmydata.

2005-10-05  Edward Hervey  <edward@fluendo.com>

	* ext/dv/gstdvdemux.c: (gst_dvdemux_src_convert),
	(gst_dvdemux_src_query):
	Fixes for better conversion

2005-10-04  Michael Smith <msmith@fluendo.com>

	* gst/autodetect/gstautoaudiosink.c: (gst_auto_audio_sink_reset),
	(gst_auto_audio_sink_find_best), (gst_auto_audio_sink_detect):
	* gst/autodetect/gstautovideosink.c: (gst_auto_video_sink_reset),
	(gst_auto_video_sink_find_best), (gst_auto_video_sink_detect):
	  Set state of elements to NULL before removing from bins.
	  Set state of test element to NULL if we failed to move it to READY

2005-10-04  Edward Hervey  <edward@fluendo.com>

	* ext/dv/Makefile.am:
	* ext/dv/gstdvdemux.c: (gst_dvdemux_src_query), (gst_dvdemux_src_conver): 
	Added DEFAULT <==> BYTES, TIME conversions on srcpad,
	Corrected the query function for position so it doesn't forget what
	format was asked, and calls the conversion functions on the correct pad.

2005-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to development

=== release 0.9.3 ===
