@@ -2,6 +2,9 @@
 
 	* ext/raw1394/gstdv1394src.c: Make interruptible, so it won't
 	block forever in a read().
+	(gst_dv1394src_bus_reset): Post a message when the cable is
+	unplugged.
+	(gst_dv1394src_create, gst_dv1394src_unlock): Remove some prints.
 
 	* ext/raw1394/gstdv1394src.c: Clean up for style before doing some
 	hacking. The only change should be that the state change stuff was
